# my-claw

./: .env.example  .gitignore  AGENTS.md  CHECKPOINT-TOOL10.md  CHECKPOINT-TOOL7.md  COMPARATIF.md  IMPL.md  IMPLEMENTATION-TOOLS.md  LEARNING.md  LICENSE  MIGRATION-MULTI-AGENT.md  PLAN.md  PROGRESS.md  QWEN.md  README.fr.md  README.md  STATUS.md  TEST-RESULTS.md  TEST-TOOL10.md  TEST-TOOL7.md  UPGRADE.md  implementation-tool-pythoninterpreter.md  implementation-tool-userinput.md  implementation-tool4-mcp-web-search-zai.md  implementation-tool4-web-search.md  implementation-tool5-web-reader.md  setup.ps1  setup.sh
agent/: .env.example  SKILLS.md  gradio_app.py  main.py  models.py  pyproject.toml  requirements.txt  skills.txt  snapshot.json  test_clean_glm.py  test_grounding.py  test_mcp_vision.py  test_tool10.py  test_vision.py  test_zai_api.ps1
agent/agents/: __init__.py  browser_agent.py  pc_control_agent.py  vision_agent.py  web_agent.py
agent/tools/: __init__.py  clipboard.py  file_system.py  grounding.py  mouse_keyboard.py  os_exec.py  screenshot.py  vision.py  web_search_tool.py  web_visit_tool.py
agent_docs/: tech-spec.md
gateway/: .env.example  package-lock.json  package.json  prisma.config.ts
gateway/app/: page.tsx
plans/: configure-glm47-as-default-model.md  correction-code-review-issues-v2.md  correction-code-review-issues-v3.md  correction-code-review-issues-v4.md  correction-code-review-issues.md  correction-vision-agent.md  implementation-tool10-mcp-chrome-devtools.md  migration-ui-tars-to-qwen3-vl.md  rapport-verification-documentation.md  refactoring-vision-agent.md  (+3 more)
(+13 files in other folders)
