[project]
name = "my-claw-agent"
version = "0.1.0"
description = "my-claw — Agent Python smolagents"
requires-python = ">=3.11"

dependencies = [
    "smolagents[litellm,mcp]>=1.9.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "requests>=2.32.0",
    "httpx>=0.27.0",
    "gradio>=5.0.0",
    "python-dotenv>=1.0.0",
    "pyperclip>=1.11.0",
    "pyautogui>=0.9.54",
    "pillow>=12.1.1",
    "mcp>=0.9.0",
    "mcpadapt>=0.1.19",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pyright>=1.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
