[project]
name = "my-claw-agent"
version = "0.2.0"
description = "my-claw — Agent Python smolagents multi-agent"
requires-python = ">=3.14.3"

dependencies = [
    "smolagents[litellm,mcp]>=1.24.0",
    "fastapi>=0.131.0",
    "uvicorn[standard]>=0.41.0",
    "pydantic>=2.12.0",
    "requests>=2.32.0",
    "httpx>=0.28.0",
    "gradio>=6.6.0",
    "python-dotenv>=1.0.0",
    "pyperclip>=1.11.0",
    "pyautogui>=0.9.54",
    "pillow>=12.1.0",
    "mcp>=1.26.0",
    "mcpadapt>=0.1.20",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.0",
    "pyright>=1.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "basic"
